--- a/assets/texts/news.txt
+++ b/assets/texts/news.txt
@@ -5,7 +5,7 @@ Jedes Jahr gibt es neue Konzepte, Pläne und Entwicklungen, über die wir Sie au
 
 ## Neubau ##
 
-Die Schule am Ried wird sich in den nächsten 2 Jahren baulich verändern. An der Stelle, an der sich derzeit noch die beiden Oberstufengebäude befinden, wird in Kürze ein Neu- und Erweiterungsbau entstehen, der höchsten architektonischen und künstlerischen Ansprüchen gerecht werden wird. Im ersten Stock werden sich 16 modern eingerichtete Klassenräume befinden, während das Erdgeschoss Platz für eine geräumige Cafeteria und Mensa bieten wird.
+Die Schule am Ried wird sich in den nächsten 2 Jahren baulich verändern. An der Stelle, an der sich bis vor kurzem noch die beiden Oberstufengebäude befinden, wird in Kürze ein Neu- und Erweiterungsbau entstehen, der höchsten architektonischen und künstlerischen Ansprüchen gerecht werden wird. Im ersten Stock werden sich 16 modern eingerichtete Klassenräume befinden, während das Erdgeschoss Platz für eine geräumige Cafeteria und Mensa bieten wird.
 
 ![](image33)
 
@@ -21,6 +21,6 @@ Im Jahr 2020 haben wir das Zertifikat „Schule ohne Rassismus – Schule mit Co
 
 ## Digitalisierung & Schul-Cloud ##
 
-Die Schule am Ried ist durch die Mitgliedschaft bei MINT-EC Pilotschule bei der Nutzung der HPI-Schul-Cloud. Die Schul-Cloud verspricht eine innovative und sichere IT-Infrastruktur in der Schule, trägt zu einem zeitgemäßen Unterricht bei und schont im Rahmen dessen Ressourcen und Budgets. Dies bedeutete, dass wir beim Lockdown im Frühjahr 2020 innerhalb von Tagen auf digitalen Unterricht mit der Schul-Cloud umstellen konnten und unsere Schüler/innen beim Homeschooling bestmöglich versorgt waren. Aber auch die IT-Ausstattung der Schule am Ried verbessert sich zügig. Nach der kompletten Neuausstattung vor zwei Jahren mit Computerräumen und PC in allen Klassenräumen sind mittlerweile alle Unterrichtsräume mit Beamern ausgestattet und verfügen über eine Breitband (Gigabit) Internet-Anbindung. Mit Mitteln des Digitalpakts wird die Präsentationstechnik in kürze weiter verbessert werden. Ehe in rund zwei Jahren die Schule auch mit dem städtischen WLAN ausgestattet werden wird, konnten wir mit Hilfe des Fördervereins bereits jetzt ein schuleigenes WLAN installieren und auch beispielsweise iPads anschaffen.
+Die Schule am Ried ist Pilotschule bei der Nutzung der HPI-Schul-Cloud ("dBildungscloud"). Die Bildungscloud verspricht eine innovative und sichere IT-Infrastruktur in der Schule, trägt zu einem zeitgemäßen Unterricht bei und schont im Rahmen dessen Ressourcen und Budgets. Dies bedeutete, dass wir beim Lockdown kurzfristig auf digitalen Unterricht mit der Schul-Cloud umstellen konnten und unsere Schüler/innen beim Homeschooling bestmöglich versorgt waren. Aber auch die IT-Ausstattung der Schule am Ried verbessert sich zügig. Nach der kompletten Neuausstattung vor drei Jahren mit Computerräumen und PC in allen Klassenräumen sind mittlerweile alle Unterrichtsräume mit Beamern ausgestattet und verfügen über eine Breitband (Gigabit) Internet-Anbindung. Mit Mitteln des Digitalpakts wird die Präsentationstechnik weiter verbessert werden. Ehe die Schule auch mit dem städtischen WLAN ausgestattet werden wird, konnten wir mit Hilfe des Fördervereins bereits jetzt ein schuleigenes WLAN installieren und auch beispielsweise iPads anschaffen. Zudem verfügt die Schule seit kurzem über ein Gigabit-Internetanschluss.
 
 ![](image29)
